--- a/public/index.html
+++ b/public/index.html
@@ -969,7 +969,7 @@
     })();
     // --- End Gate 3 live chip render ---
 
-    // --- Gate 4 shader wall (Scope 1: time-only breath with edge anchor + particles + colour wheel) ---
+    // --- Gate 4 shader wall (Scope 1: breath, edge anchor, particles, colour wheel, manu-follow) ---
 	(function initGate4Shader(){
 	  const canvas = document.getElementById('gate4-canvas');
 	  if (!canvas || !window.THREE) return;
@@ -1002,32 +1002,21 @@
 		uniform vec3 u_glowColor;
 
 		void main() {
-		  // Normalised UV centred at 0,0
 		  vec2 uv = vUv;
 		  vec2 centred = uv - 0.5;
-
-		  // Distance from centre (0 = centre, ~0.7 = corners)
 		  float dist = length(centred);
 
-		  // Base breath – smooth sine over time (about 10s period)
 		  float speed = 0.6;
 		  float breath = 0.5 + 0.5 * sin(u_time * speed);
 
-		  // Edge anchor: 0 in centre, 1 toward edges
 		  float edge = smoothstep(0.35, 0.8, dist);
-
-		  // Bulge strong in centre, fades toward edges
 		  float bulge = breath * (1.0 - edge);
-
-		  // Subtle radial falloff so the centre glows more
 		  float vignette = 1.0 - smoothstep(0.0, 0.9, dist);
 
-		  // Colour: deep base + gate-tinted glow
 		  vec3 base = vec3(0.01, 0.03, 0.06);
 		  vec3 glow = u_glowColor;
 
 		  float intensity = bulge * vignette;
-
 		  vec3 color = base + glow * intensity;
 
 		  gl_FragColor = vec4(color, 1.0);
@@ -1055,19 +1044,17 @@
 	  for (let i = 0; i < particleCount; i++) {
 		const i3 = i * 3;
 
-		// random position in a disc in front of the wall
 		const r = Math.random() * 1.2;
 		const a = Math.random() * Math.PI * 2.0;
 
 		const x = Math.cos(a) * r;
 		const y = Math.sin(a) * r;
-		const z = (Math.random() - 0.5) * 0.2; // slight depth variation
+		const z = (Math.random() - 0.5) * 0.2;
 
 		positions[i3 + 0] = x;
 		positions[i3 + 1] = y;
 		positions[i3 + 2] = z;
 
-		// random offsets per particle for unique motion
 		offsets[i3 + 0] = Math.random() * 10.0;
 		offsets[i3 + 1] = Math.random() * 10.0;
 		offsets[i3 + 2] = Math.random() * 10.0;
@@ -1080,6 +1067,8 @@
 	  const particleVertexShader = `
 		uniform float u_time;
 		uniform float u_breathIntensity;
+		uniform vec2  u_cursor;
+		uniform float u_cursorInfluence;
 
 		attribute vec3 aOffset;
 
@@ -1094,16 +1083,20 @@
 		  pos.x += 0.1 * sin(t + aOffset.y);
 		  pos.y += 0.1 * cos(t + aOffset.z);
 
-		  // breathing in z
 		  float breath = 0.5 + 0.5 * sin(u_time * 0.8 + aOffset.x);
 		  pos.z += (breath - 0.5) * 0.2 * u_breathIntensity;
 
-		  // alpha/twinkle based on breath
+		  // --- manu-follow: slight attraction toward cursor ---
+		  // u_cursor is in [-1,1] space, same as plane
+		  vec2 toCursor = u_cursor - pos.xy;
+		  // soften pull with distance + breath
+		  float dist = length(toCursor);
+		  float pull = u_cursorInfluence * breath * smoothstep(1.2, 0.0, dist);
+		  pos.xy += toCursor * pull;
+
 		  vAlpha = 0.2 + 0.8 * breath;
 
 		  gl_Position = projectionMatrix * modelViewMatrix * vec4(pos, 1.0);
-
-		  // size in screen pixels
 		  gl_PointSize = 2.5 + 2.0 * breath;
 		}
 	  `;
@@ -1114,15 +1107,12 @@
 		uniform vec3 u_particleColor;
 
 		void main() {
-		  // gl_PointCoord is 0-1 inside the point
 		  vec2 coord = gl_PointCoord - 0.5;
 		  float dist = length(coord);
 
-		  // soft circular mask
 		  float mask = smoothstep(0.5, 0.0, dist);
 
-		  vec3 color = u_particleColor; // gate-tinted fireflies
-
+		  vec3 color = u_particleColor;
 		  float alpha = vAlpha * mask;
 
 		  gl_FragColor = vec4(color, alpha);
@@ -1134,9 +1124,11 @@
 		depthWrite: false,
 		blending: THREE.AdditiveBlending,
 		uniforms: {
-		  u_time:           { value: 0.0 },
-		  u_breathIntensity:{ value: 1.0 },
-		  u_particleColor:  { value: new THREE.Color(1.0, 0.7, 0.4) } // default warm
+		  u_time:            { value: 0.0 },
+		  u_breathIntensity: { value: 1.0 },
+		  u_particleColor:   { value: new THREE.Color(1.0, 0.7, 0.4) },
+		  u_cursor:          { value: new THREE.Vector2(0.0, 0.0) },
+		  u_cursorInfluence: { value: 0.35 } // how strongly manu follow you
 		},
 		vertexShader: particleVertexShader,
 		fragmentShader: particleFragmentShader
@@ -1148,36 +1140,53 @@
 	  // --- Gate colour wheel mapping ---
 
 	  const gateColors = {
-		1: { // Gate 1 — Hei Rata (Identity / Taonga)
-		  glow:      new THREE.Color(1.0, 0.80, 0.45), // warm gold
+		1: {
+		  glow:      new THREE.Color(1.0, 0.80, 0.45),
 		  particles: new THREE.Color(1.0, 0.85, 0.55)
 		},
-		2: { // Gate 2 — Inside the Grain (Pattern / Wood)
-		  glow:      new THREE.Color(0.55, 0.95, 0.65), // soft green
+		2: {
+		  glow:      new THREE.Color(0.55, 0.95, 0.65),
 		  particles: new THREE.Color(0.70, 1.00, 0.70)
 		},
-		3: { // Gate 3 — Evidence Realm (Whiro / AR / Data)
-		  glow:      new THREE.Color(0.30, 0.70, 1.00), // electric blue
+		3: {
+		  glow:      new THREE.Color(0.30, 0.70, 1.00),
 		  particles: new THREE.Color(0.60, 0.80, 1.00)
 		},
-		4: { // Gate 4 — Te Pūkāea o te Manawa (Breath Wall)
-		  glow:      new THREE.Color(1.00, 0.55, 0.35), // puku orange
+		4: {
+		  glow:      new THREE.Color(1.00, 0.55, 0.35),
 		  particles: new THREE.Color(1.00, 0.70, 0.40)
 		}
 	  };
 
 	  function setGateMode(gate){
 		const cfg = gateColors[gate] || gateColors[4];
-
 		wallMaterial.uniforms.u_glowColor.value.copy(cfg.glow);
 		particleMaterial.uniforms.u_particleColor.value.copy(cfg.particles);
 	  }
 
-	  // expose to other scripts
 	  window.msmdSetGateMode = setGateMode;
+	  setGateMode(4); // default Gate 4
 
-	  // default state: Gate 4 colours
-	  setGateMode(4);
+	  // --- Pointer → u_cursor mapping (manu-follow) ---
+
+	  const cursor = particleMaterial.uniforms.u_cursor.value;
+
+	  function updateCursorFromEvent(ev){
+		const rect = canvas.getBoundingClientRect();
+		if (rect.width === 0 || rect.height === 0) return;
+
+		const x = ((ev.clientX - rect.left) / rect.width) * 2 - 1;
+		const y = -(((ev.clientY - rect.top) / rect.height) * 2 - 1);
+
+		cursor.set(x, y);
+	  }
+
+	  canvas.addEventListener('pointermove', updateCursorFromEvent);
+	  canvas.addEventListener('pointerdown', updateCursorFromEvent);
+
+	  canvas.addEventListener('pointerleave', () => {
+		cursor.set(0.0, 0.0); // return to centre when you leave
+	  });
 
 	  // --- Resize & animation loop ---
 
@@ -1189,7 +1198,7 @@
 	  }
 
 	  function animate(timestamp){
-		const t = timestamp * 0.001; // seconds
+		const t = timestamp * 0.001;
 
 		wallMaterial.uniforms.u_time.value = t;
 		particleMaterial.uniforms.u_time.value = t;
@@ -1205,7 +1214,8 @@
 		resizeRendererToDisplaySize();
 	  });
 	})();
-// --- End Gate 4 shader wall ---
+	// --- End Gate 4 shader wall ---
+
 
   </script>
 </body>
