Add Gate 4 shader breath wall (Scope 1)

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Moko See Moko Do — Proof of Breath</title>
   <meta name="description" content="Moko See Moko Do / Ngā Wai o Rua — a living whare in code and carving. Every cut a law, every chip a Tiki.">
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "CreativeWork",
+	  "name": "Moko See Moko Do (MSMD)",
+	  "url": "https://mokoseemokodo.com",
+	  "image": "https://mokoseemokodo.com/assets/karakia_blink_poster.png",
+	  "creator": {
+		"@type": "Person",
+		"name": "Kade Cowper",
+		"jobTitle": "Kai Whakairo / Founder of MSMD",
+		"url": "https://mokoseemokodo.com"
+	  },
+	  "description": "Moko See Moko Do is a behavioural and creative engine blending carving (whakairo), digital motion, Māori law, and ledger-based practice. A living whare in code and carving — doing > talking. Watch the wall breathe, follow the ledger, and see the chips turn into pattern.",
+	  "keywords": [
+		"Moko See Moko Do",
+		"MSMD",
+		"Ngā Wai o Rua",
+		"Māori digital carving",
+		"whakairo",
+		"Aotearoa art engine",
+		"Proof of Breath",
+		"Whiro ledger",
+		"Rongo chips",
+		"Māori motion design",
+		"kaupapa Māori creative technology"
+	  ],
+	  "inLanguage": "mi-NZ",
+	  "genre": "Creative Technology / Māori Arts / Digital Ritual Engine",
+	  "publisher": {
+		"@type": "Organization",
+		"name": "Moko See Moko Do",
+		"url": "https://mokoseemokodo.com"
+	  },
+	  "mainEntityOfPage": "https://mokoseemokodo.com"
+	}
+</script>
 
   <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" sizes="180x180" />
   <link rel="icon" href="assets/favicon.png" type="image/png" />
