SEO Pass 2 — updated page content + meta tags

--- a/public/engine.html
+++ b/public/engine.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>The MSMD / Ngā Wai o Rua Engine</title>
-  <meta name="description" content="The MSMD / Ngā Wai o Rua engine is a closed-loop behavioural system that turns feeling into action, action into evidence, and evidence into law." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Engine Overview | Māori Digital Carving System Architecture</title>
+<meta name="description" content="A full breakdown of the MSMD engine architecture — stages, gates, flows, timing, patterns, and how carving becomes digital motion.">
+<meta name="keywords" content="maori engine, msmd engine, carving engine, digital carving architecture, indigenous tech system">
+
+<link rel="canonical" href="https://mokoseemokodo.com/engine">
+
+<meta property="og:title" content="Engine Overview | Māori Digital Carving System Architecture">
+<meta property="og:description" content="A full breakdown of the MSMD engine architecture — stages, gates, flows, timing, patterns, and how carving becomes digital motion.">
+<meta property="og:url" content="https://mokoseemokodo.com/engine">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Engine Overview | Māori Digital Carving System Architecture">
+<meta name="twitter:description" content="A full breakdown of the MSMD engine architecture — stages, gates, flows, timing, patterns, and how carving becomes digital motion.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>The Engine</h1>
