--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Moko See Moko Do — Proof of Breath</title>
   <meta name="description" content="Moko See Moko Do / Ngā Wai o Rua — a living whare in code and carving. Every cut a law, every chip a Tiki.">
+  
+	  <title>Moko See Moko Do | Māori Digital Carving Engine & Art Studio</title>
+	<meta name="description" content="Experience Moko See Moko Do — a Māori digital carving engine blending 3D art, motion, ritual, and real-time creation. Explore gates, walls, and live updates.">
+	<meta name="keywords" content="moko see moko do, maori digital art, digital carving, maori engine, msmd, realtime carving, indigenous digital art, art installation, maori design">
+
+	<link rel="canonical" href="https://mokoseemokodo.com/">
+
+	<meta property="og:title" content="Moko See Moko Do | Māori Digital Carving Engine & Art Studio">
+	<meta property="og:description" content="Experience Moko See Moko Do — a Māori digital carving engine blending 3D art, motion, ritual, and real-time creation.">
+	<meta property="og:url" content="https://mokoseemokodo.com/">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Moko See Moko Do | Māori Digital Carving Engine & Art Studio">
+	<meta name="twitter:description" content="Experience Moko See Moko Do — a Māori digital carving engine blending 3D art, motion, ritual, and real-time creation.">
+	<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
 	<script type="application/ld+json">
 	{
 	  "@context": "https://schema.org",
-	  "@type": "CreativeWork",
+	  "@type": "WebSite",
 	  "name": "Moko See Moko Do (MSMD)",
 	  "url": "https://mokoseemokodo.com",
 	  "image": "https://mokoseemokodo.com/assets/karakia_blink_poster.png",
