--- a/public/io.html
+++ b/public/io.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>IO Layer — Still Centre of the Engine</title>
-  <meta name="description" content="The IO layer holds the still centre of the MSMD / Ngā Wai o Rua engine, where intent, timing, and law are set before action." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>IO Layer | Core Māori Logic & Creative Source Code</title>
+<meta name="description" content="The IO layer defines the core logic and source code of MSMD — foundational Māori principles guiding truth, action, and creative motion.">
+<meta name="keywords" content="IO layer, maori logic, source code maori, indigenous computation, maori creative engine, io principles">
+
+<link rel="canonical" href="https://mokoseemokodo.com/io">
+
+<meta property="og:title" content="IO Layer | Core Māori Logic & Creative Source Code">
+<meta property="og:description" content="The IO layer defines the core logic and source code of MSMD — foundational Māori principles guiding truth, action, and creative motion.">
+<meta property="og:url" content="https://mokoseemokodo.com/io">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="IO Layer | Core Māori Logic & Creative Source Code">
+<meta name="twitter:description" content="The IO layer defines the core logic and source code of MSMD — foundational Māori principles guiding truth, action, and creative motion.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>IO — Still Centre</h1>
