--- a/public/korowai.html
+++ b/public/korowai.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Korowai Layer — Cloak of the Engine</title>
-  <meta name="description" content="The Korowai Layer is the outer cloak of the MSMD engine, weaving Crowns, laws, and artefacts into one story for people and whenua." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Korowai Layer | Structural Māori Pattern Architecture</title>
+<meta name="description" content="Explore the Korowai structural layer — the architectural pattern foundation of MSMD, integrating whakapapa, pattern, and motion.">
+<meta name="keywords" content="korowai, maori pattern architecture, structural pattern, maori art system, korowai concept, maori digital design">
+
+<link rel="canonical" href="https://mokoseemokodo.com/korowai">
+
+<meta property="og:title" content="Korowai Layer | Structural Māori Pattern Architecture">
+<meta property="og:description" content="Explore the Korowai structural layer — the architectural pattern foundation of MSMD, integrating whakapapa, pattern, and motion.">
+<meta property="og:url" content="https://mokoseemokodo.com/korowai">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Korowai Layer | Structural Māori Pattern Architecture">
+<meta name="twitter:description" content="Explore the Korowai structural layer — the architectural pattern foundation of MSMD, integrating whakapapa, pattern, and motion.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
 </head>
 <body>
   <h1>Korowai Layer</h1>
