--- a/public/msmd.html
+++ b/public/msmd.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Moko See Moko Do (MSMD) — The Engine</title>
-  <meta name="description" content="Moko See Moko Do (MSMD) is a behavioural and creative engine where every cut is a law and every chip is a Tiki. A living whare in code and carving." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>MSMD Engine | Māori Digital Carving System Explained</title>
+<meta name="description" content="Discover how the MSMD engine blends carving, motion, law, and ritual into a live Māori creative system. Every cut is evidence. Every action is breath.">
+<meta name="keywords" content="MSMD, maori carving system, live art engine, indigenous tech, carving workflow, digital tikanga, art engine">
+
+<link rel="canonical" href="https://mokoseemokodo.com/msmd">
+
+<meta property="og:title" content="MSMD Engine | Māori Digital Carving System Explained">
+<meta property="og:description" content="Discover how the MSMD engine blends carving, motion, law, and ritual into a live Māori creative system.">
+<meta property="og:url" content="https://mokoseemokodo.com/msmd">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MSMD Engine | Māori Digital Carving System Explained">
+<meta name="twitter:description" content="Discover how the MSMD engine blends carving, motion, law, and ritual into a live Māori creative system.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Moko See Moko Do (MSMD)</h1>
