--- a/public/nga-wai-o-rua.html
+++ b/public/nga-wai-o-rua.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Ngā Wai o Rua — The Two Waters Engine</title>
-  <meta name="description" content="Ngā Wai o Rua means the two waters. In this kaupapa it names the behavioural engine that links carving, digital motion, and emotional flow." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+ <title>Ngā Wai o Rua | Dual Flow Pattern Framework</title>
+<meta name="description" content="Learn the Ngā Wai o Rua pattern system — dual-flow Māori design principles shaping motion, balance, form, and real-time digital carving.">
+<meta name="keywords" content="nga wai o rua, maori pattern system, maori design flow, dual flow, carving patterns, indigenous geometry">
+
+<link rel="canonical" href="https://mokoseemokodo.com/ngo-wai-o-rua">
+
+<meta property="og:title" content="Ngā Wai o Rua | Dual Flow Pattern Framework">
+<meta property="og:description" content="Learn the Ngā Wai o Rua pattern system — dual-flow Māori design principles shaping motion, balance, form, and real-time digital carving.">
+<meta property="og:url" content="https://mokoseemokodo.com/ngo-wai-o-rua">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Ngā Wai o Rua | Dual Flow Pattern Framework">
+<meta name="twitter:description" content="Learn the Ngā Wai o Rua pattern system — dual-flow Māori design principles shaping motion, balance, form, and real-time digital carving.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
 </head>
 <body>
   <h1>Ngā Wai o Rua</h1>
