--- a/public/nwor.html
+++ b/public/nwor.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Ngā Wai o Rua (NWOR) — Two Waters</title>
-  <meta name="description" content="Ngā Wai o Rua (NWOR) is the twin-water layer of the MSMD engine, tracking the flow between physical carving and digital motion." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>NWOR | Māori Workflow of Ritual & Real-Time Creation</title>
+<meta name="description" content="MWOR outlines the ritual-driven workflow used in MSMD — a Māori creative system powered by timing, breath, evidence, and real action.">
+<meta name="keywords" content="MWOR, maori workflow, ritual workflow, maori creative system, creative ritual engine">
+
+<link rel="canonical" href="https://mokoseemokodo.com/mwor">
+
+<meta property="og:title" content="MWOR | Māori Workflow of Ritual & Real-Time Creation">
+<meta property="og:description" content="MWOR outlines the ritual-driven workflow used in MSMD — a Māori creative system powered by timing, breath, evidence, and real action.">
+<meta property="og:url" content="https://mokoseemokodo.com/mwor">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MWOR | Māori Workflow of Ritual & Real-Time Creation">
+<meta name="twitter:description" content="MWOR outlines the ritual-driven workflow used in MSMD — a Māori creative system powered by timing, breath, evidence, and real action.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Ngā Wai o Rua (NWOR)</h1>
