--- a/public/pattern-line.html
+++ b/public/pattern-line.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Pattern Line — North Axis of MSMD</title>
-  <meta name="description" content="The Pattern Line is the north axis of MSMD / Ngā Wai o Rua, where small repeated acts become law and geometry." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Pattern Line | Māori Design Flow & Structural Sequence</title>
+<meta name="description" content="The Pattern Line reveals the flow sequence behind Māori design, connecting unaunahi, pakati, crescents, waves, and carving geometry.">
+<meta name="keywords" content="pattern line, maori patterns, maori geometric design, unaunahi, pakati, maori carving patterns">
+
+<link rel="canonical" href="https://mokoseemokodo.com/pattern-line">
+
+<meta property="og:title" content="Pattern Line | Māori Design Flow & Structural Sequence">
+<meta property="og:description" content="The Pattern Line reveals the flow sequence behind Māori design, connecting unaunahi, pakati, crescents, waves, and carving geometry.">
+<meta property="og:url" content="https://mokoseemokodo.com/pattern-line">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Pattern Line | Māori Design Flow & Structural Sequence">
+<meta name="twitter:description" content="The Pattern Line reveals the flow sequence behind Māori design, connecting unaunahi, pakati, crescents, waves, and carving geometry.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Pattern Line</h1>
