--- a/public/proof-of-breath.html
+++ b/public/proof-of-breath.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Proof of Breath — First Crown of MSMD</title>
-  <meta name="description" content="Proof of Breath is the first public Crown of Moko See Moko Do, showing the wall that breathes and the ledger that records each cut." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Proof of Breath | Live Māori Digital Carving Wall</title>
+<meta name="description" content="See the MSMD Proof of Breath wall — a breathing digital installation showing real-time motion, glow, rhythm, and Māori creative pattern.">
+<meta name="keywords" content="proof of breath, maori digital wall, breathing wall, maori installation, digital pou, interactive art">
+
+<link rel="canonical" href="https://mokoseemokodo.com/proof-of-breath">
+
+<meta property="og:title" content="Proof of Breath | Live Māori Digital Carving Wall">
+<meta property="og:description" content="See the MSMD Proof of Breath wall — a breathing digital installation showing real-time motion, glow, rhythm, and Māori creative pattern.">
+<meta property="og:url" content="https://mokoseemokodo.com/proof-of-breath">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Proof of Breath | Live Māori Digital Carving Wall">
+<meta name="twitter:description" content="See the MSMD Proof of Breath wall — a breathing digital installation showing real-time motion, glow, rhythm, and Māori creative pattern.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Proof of Breath</h1>
