--- a/public/rongo-chips.html
+++ b/public/rongo-chips.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Rongo Chips — Evidence of Peace</title>
-  <meta name="description" content="Rongo chips are reflection entries in the MSMD engine that settle the day, tie off learning, and store pattern for the future." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Rongo Chips | Evidence Log of Daily Māori Creative Practice</title>
+<meta name="description" content="Explore Rongo Chips — the mapped evidence of daily Māori creative actions, reflections, and ritual practices captured inside the MSMD engine.">
+<meta name="keywords" content="rongo chips, daily creative log, maori evidence log, creative ledger, msmd ledger">
+
+<link rel="canonical" href="https://mokoseemokodo.com/rongo-chips">
+
+<meta property="og:title" content="Rongo Chips | Evidence Log of Daily Māori Creative Practice">
+<meta property="og:description" content="Explore Rongo Chips — the mapped evidence of daily Māori creative actions, reflections, and ritual practices captured inside the MSMD engine.">
+<meta property="og:url" content="https://mokoseemokodo.com/rongo-chips">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Rongo Chips | Evidence Log of Daily Māori Creative Practice">
+<meta name="twitter:description" content="Explore Rongo Chips — the mapped evidence of daily Māori creative actions, reflections, and ritual practices captured inside the MSMD engine.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Rongo Chips</h1>
