--- a/public/whiro-ledger.html
+++ b/public/whiro-ledger.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Whiro Ledger — Daily Chips</title>
-  <meta name="description" content="The Whiro ledger is the daily chip record for MSMD: small, honest entries that log action, feeling, and evidence." />
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  
+  <title>Whiro Ledger | Dark-Moon Creative Evidence System</title>
+<meta name="description" content="The Whiro Ledger documents new creation, experiments, and breakthroughs aligned with the lunar cycle — the foundation of MSMD development.">
+<meta name="keywords" content="whiro ledger, maori lunar cycle, creative ledger, dark moon creation, msmd logging system">
+
+<link rel="canonical" href="https://mokoseemokodo.com/whiro-ledger">
+
+<meta property="og:title" content="Whiro Ledger | Dark-Moon Creative Evidence System">
+<meta property="og:description" content="The Whiro Ledger documents new creation, experiments, and breakthroughs aligned with the lunar cycle — the foundation of MSMD development.">
+<meta property="og:url" content="https://mokoseemokodo.com/whiro-ledger">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Whiro Ledger | Dark-Moon Creative Evidence System">
+<meta name="twitter:description" content="The Whiro Ledger documents new creation, experiments, and breakthroughs aligned with the lunar cycle — the foundation of MSMD development.">
+<meta name="twitter:image" content="https://mokoseemokodo.com/assets/hero.jpg">
+
+  
 </head>
 <body>
   <h1>Whiro Ledger</h1>
